<resources>
    <string name="app_name">MyWorkout</string>
    <string name="action_settings">Settings</string>
    <string name="auth_token_key_string">auth_token</string>
    <string name="toast_load_home_error_message">Unable to load the home page</string>
    <string name="profile_fragment_error_message">Unable to load profile fragment</string>
    <string name="api_base_url">https://muse-pad.herokuapp.com/api/v1/</string>
    <string name="api_interceptor_auth_header">Authorization</string>
    <string name="key_email_availability">email_availability</string>
    <string name="fragment_login_loading_page_error">Unable to load login page</string>
    <string name="fragment_registration_page_loading_error">Unable to load registration page</string>
    <string name="toast_email_already_exists">Email already exists</string>
    <string name="tv_key_set_text_email">Email</string>
    <string name="key_email_map_data">Email</string>
    <string name="tv_gender_label">Gender</string>
    <string name="tv_gender_map_data">Gender</string>
    <string name="email_valid_string">Enter a valid email address</string>
    <string name="key_email">email</string>
    <string name="value_gender_data">gender</string>
    <string name="enter_password_promp">Enter password</string>
    <string name="password_length_prompt">Enter password more than 6 characters</string>
    <string name="profile_card_hint_string">Key</string>
    <string name="profile_card_tv_value_hint_text">Value</string>
    <string name="fragment_login_tv_app_name_text">Myworkout GO</string>
    <string name="fragment_login_tv_guiding_text_display_text">Start by entering your email address</string>
    <string name="fragment_login_tv_email_address_text_hint">Email address</string>
    <string name="fragment_login_tv_password_text">Password</string>
    <string name="fragment_login_tv_login_nav_login_text">Log in</string>
    <string name="fragment_login_tv_cancel_text_cancel">Cancel</string>
    <string name="fragment_main_tv_name_text">Myworkout GO</string>
    <string name="fragment_main_tv_guiding_text_description">Start by entering your email address</string>
    <string name="fragment_main_tv_email_text">Email address</string>
    <string name="fragment_main_nav_constraint_tv_login_text">Next</string>
    <string name="fragment_profile_button_logout_text_description">Log out</string>
    <string name="fragment_registration_tv_app_help_text">Create a new account</string>
    <string name="fragment_registration_tv_guiding_text_help_text">Fill out the form and sign up for free.</string>
    <string name="fragment_registration_tv_email_address_hint">unregistered@email.com</string>
    <string name="fragment_registration_tv_password_text">Password</string>
    <string name="fragment_registration_constraint_tv_login_sign_up_text">Sign up</string>
    <string name="fragment_registration_constraint_tv_cancel_text">Cancel</string>
</resources>
