<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_myworkoutlog"
        android:layout_width="@dimen/fragment_login_layout_margin"
        android:layout_height="@dimen/fragment_login_image_layout_height"
        android:layout_marginStart="@dimen/fragment_login_image_margin_start"
        android:layout_marginLeft="@dimen/fragment_login_image_margin_left"
        android:layout_marginTop="@dimen/fragment_login_image_margin_top"
        android:layout_marginEnd="@dimen/fragment_login_image_margin_end"
        android:layout_marginRight="@dimen/fragment_login_image_margin_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/myworkoutlogo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fragment_login_tv_app_name_layout_height"
        android:layout_marginTop="@dimen/fragment_login_tv_app_name_margin_top"
        android:letterSpacing="0.01"
        android:text="@string/fragment_login_tv_app_name_text"
        android:textColor="#0E0D0D"
        android:textSize="@dimen/fragment_login_tv_app_name_text_size"
        app:layout_constraintEnd_toEndOf="@+id/iv_myworkoutlog"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/iv_myworkoutlog"
        app:layout_constraintTop_toBottomOf="@+id/iv_myworkoutlog"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_guiding_text"
        android:layout_width="@dimen/fragment_login_tv_guiding_text_layout_width"
        android:layout_height="@dimen/fragment_login_tv_guiding_text_layout_height"
        android:layout_marginStart="@dimen/fragment_login_tv_guiding_text_margin_start"
        android:layout_marginLeft="@dimen/fragment_login_tv_guiding_text_margin_left"
        android:layout_marginTop="@dimen/fragment_login_tv_guiding_text_margin_top"
        android:layout_marginEnd="@dimen/fragment_login_tv_guiding_text_margin_end"
        android:layout_marginRight="@dimen/fragment_login_tv_guiding_text_margin_right"
        android:text="@string/fragment_login_tv_guiding_text_display_text"
        android:textSize="@dimen/fragment_login_tv_guiding_text_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <EditText
        android:id="@+id/tv_email_address"
        android:layout_width="@dimen/fragment_login_tv_email_address_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_login_tv_email_address_margin_top"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/fragment_login_tv_email_address_text_hint"
        android:textSize="@dimen/fragment_login_tv_email_address_text_size"
        app:layout_constraintEnd_toEndOf="@+id/tv_guiding_text"
        app:layout_constraintStart_toStartOf="@+id/tv_guiding_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_guiding_text" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/fragment_login_tv_password_text"
        android:singleLine="true"
        android:textSize="@dimen/fragment_login_tv_password_text_size"
        app:layout_constraintEnd_toEndOf="@+id/tv_email_address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_email_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_address" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="@dimen/fragment_login_constraint_3_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_login_constraint_3_margin_start"
        android:layout_marginLeft="@dimen/fragment_login_constraint_3_margin_left"
        android:layout_marginTop="@dimen/fragment_login_constraint_3_margin_top"
        android:layout_marginEnd="@dimen/fragment_login_constraint_3_margin_end"
        android:layout_marginRight="@dimen/fragment_login_constraint_3_margin_right"
        android:layout_marginBottom="@dimen/fragment_login_constraint_3_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="@dimen/fragment_login_tv_login_nav_layout_width"
            android:layout_height="@dimen/fragment_login_tv_login_nav_layout_height"
            android:layout_marginTop="@dimen/fragment_login_tv_login_nav_margin_top"
            android:layout_marginEnd="@dimen/fragment_login_tv_login_nav_margin_end"
            android:layout_marginRight="@dimen/fragment_login_tv_login_nav_margin_right"
            android:layout_marginBottom="@dimen/fragment_login_tv_login_nav_margin_bottom"
            android:text="@string/fragment_login_tv_login_nav_login_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/fragment_login_tv_login_nav_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="@dimen/fragment_login_tv_cancel_layout_width"
            android:layout_height="@dimen/fragment_login_tv_cancel_layout_height"
            android:layout_marginEnd="@dimen/fragment_login_tv_cancel_margin_end"
            android:layout_marginRight="@dimen/fragment_login_tv_cancel_margin_right"
            android:text="@string/fragment_login_tv_cancel_text_cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/fragment_login_tv_cancel_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/tv_login"
            app:layout_constraintEnd_toStartOf="@+id/tv_login"
            app:layout_constraintTop_toTopOf="@+id/tv_login"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="@dimen/fragment_login_img_cancel_layout_width"
            android:layout_height="@dimen/fragment_login_img_cancel_layout_height"
            android:layout_marginStart="@dimen/fragment_login_img_cancel_margin_start"
            android:layout_marginLeft="@dimen/fragment_login_img_cancel_margin_left"
            android:layout_marginBottom="@dimen/fragment_login_img_cancel_margin_bottom"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_cancel"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/backicon" />

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="@dimen/fragment_login_img_login_layout_width"
            android:layout_height="@dimen/fragment_login_img_login_layout_height"
            android:layout_marginEnd="@dimen/fragment_login_img_login_layout_end"
            android:layout_marginRight="@dimen/fragment_login_img_login_layout_right"
            android:layout_marginBottom="@dimen/fragment_login_img_login_layout_bottom"
            app:layout_constraintBottom_toBottomOf="@+id/tv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_login"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/nexticon" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>