<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_myworkoutlog"
        android:layout_width="@dimen/fragment_registration_iv_workoutlog_layout_width"
        android:layout_height="@dimen/fragment_registration_iv_workoutlog_layout_height"
        android:layout_marginStart="@dimen/fragment_registration_iv_workoutlog_margin_start"
        android:layout_marginLeft="@dimen/fragment_registration_iv_workoutlog_margin_left"
        android:layout_marginTop="@dimen/fragment_registration_iv_workoutlog_margin_top"
        android:layout_marginEnd="@dimen/fragment_registration_iv_workoutlog_margin_end"
        android:layout_marginRight="@dimen/fragment_registration_iv_workoutlog_margin_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/myworkoutlogo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fragment_registration_tv_app_margin_height"
        android:layout_marginStart="@dimen/fragment_registration_tv_app_margin_start"
        android:layout_marginLeft="@dimen/fragment_registration_tv_app_margin_left"
        android:layout_marginTop="@dimen/fragment_registration_tv_app_margin_top"
        android:letterSpacing="0.01"
        android:text="@string/fragment_registration_tv_app_help_text"
        android:textColor="#0E0D0D"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_myworkoutlog"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/iv_myworkoutlog"
        app:layout_constraintTop_toBottomOf="@+id/iv_myworkoutlog"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_guiding_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/fragment_registration_tv_guiding_text_margin_start"
        android:layout_marginLeft="@dimen/fragment_registration_tv_guiding_text_margin_left"
        android:layout_marginTop="@dimen/fragment_registration_tv_guiding_text_margin_top"
        android:layout_marginEnd="@dimen/fragment_registration_tv_guiding_text_margin_end"
        android:layout_marginRight="@dimen/fragment_registration_tv_guiding_text_margin_right"
        android:text="@string/fragment_registration_tv_guiding_text_help_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <EditText
        android:id="@+id/tv_email_address"
        android:layout_width="@dimen/fragment_registration_tv_email_address_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_registration_tv_email_address_margin_top"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/fragment_registration_tv_email_address_hint"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_guiding_text"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/tv_guiding_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_guiding_text" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="@dimen/fragment_registration_tv_password_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_registration_tv_password_margin_top"
        android:layout_marginBottom="@dimen/fragment_registration_tv_password_margin_bottom"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/fragment_registration_tv_password_text"
        android:inputType="textPassword"
        android:textSize="@dimen/fragment_registration_tv_password_text_size"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/tv_email_address"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_email_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_address"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/fragment_registration_radio_group_layout_margin"
        android:layout_height="@dimen/fragment_registration_radio_group_layout_height"
        android:layout_marginStart="@dimen/fragment_registration_radio_group_layout_margin_start"
        android:layout_marginLeft="@dimen/fragment_registration_radio_group_layout_margin_left"
        android:layout_marginEnd="@dimen/fragment_registration_radio_group_layout_margin_end"
        android:layout_marginRight="@dimen/fragment_registration_radio_group_layout_margin_right"
        android:layout_marginBottom="@dimen/fragment_registration_radio_group_margin_bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:text="Female"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Male"
            android:textSize="20sp" />
    </RadioGroup>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="@dimen/fragment_registration_constraint_layout_width"
        android:layout_height="@dimen/fragment_registration_constraint_layout_height"
        android:layout_marginStart="@dimen/fragment_registration_constraint_margin_start"
        android:layout_marginLeft="@dimen/fragment_registration_constraint_margin_left"
        android:layout_marginTop="@dimen/fragment_registration_constraint_margin_top"
        android:layout_marginEnd="@dimen/fragment_registration_constraint_margin_end"
        android:layout_marginRight="@dimen/fragment_registration_constraint_margin_right"
        android:layout_marginBottom="@dimen/fragment_registration_constraint_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_address"
        app:layout_constraintVertical_bias="0.949">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="@dimen/fragment_registration_constraint_tv_login_layout_width"
            android:layout_height="@dimen/fragment_registration_constraint_tv_login_layout_height"
            android:text="@string/fragment_registration_constraint_tv_login_sign_up_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/fragment_registration_constraint_tv_login_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/img_signup"
            app:layout_constraintEnd_toStartOf="@+id/img_signup"
            app:layout_constraintTop_toTopOf="@+id/img_signup" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="@dimen/fragment_registration_constraint_tv_cancel_layout_width"
            android:layout_height="@dimen/fragment_registration_constraint_tv_cancel_layout_height"
            android:layout_marginStart="@dimen/fragment_registration_constraint_tv_cancel_margin_start"
            android:layout_marginLeft="@dimen/fragment_registration_constraint_tv_cancel_margin_left"
            android:text="@string/fragment_registration_constraint_tv_cancel_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/fragment_registration_constraint_tv_cancel_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/img_cancel"
            app:layout_constraintStart_toEndOf="@+id/img_cancel_registration"
            app:layout_constraintTop_toTopOf="@+id/img_cancel_registration"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/img_cancel_registration"
            android:layout_width="@dimen/fragment_registration_constraint_tv_cancel_registration_layout_width"
            android:layout_height="@dimen/fragment_registration_constraint_tv_cancel_registration_layout_height"
            android:layout_marginTop="@dimen/fragment_registration_constraint_tv_cancel_registration_margin_top"
            android:layout_marginBottom="@dimen/fragment_registration_constraint_tv_cancel_registration_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/backicon"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/img_signup"
            android:layout_width="@dimen/fragment_registration_constraint_tv_sign_up_layout_width"
            android:layout_height="@dimen/fragment_registration_constraint_tv_sign_up_layout_height"
            android:layout_marginTop="@dimen/fragment_registration_constraint_tv_sign_up_margin_top"
            android:layout_marginEnd="@dimen/fragment_registration_constraint_tv_sign_up_margin_end"
            android:layout_marginRight="@dimen/fragment_registration_constraint_tv_sign_up_margin_right"
            android:layout_marginBottom="@dimen/fragment_registration_constraint_tv_sign_up_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/nexticon" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>